# phantom-cli-tools

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  README_V2.md  agno_social_team.py  composio_entities.json  config.py  connect_linkedin.py  demo_agno_native.py  direct_linkedin.py  docker-compose.yml  linkedin_final.py  linkedin_oauth.py  linkedin_production.py  linkedin_simple.py  main.py  modal_agno_deploy.py  modal_app.py  modal_deploy.py  modal_deploy_v2.py  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  run.sh  run_tests.py  setup.sh  setup_modal_secrets.sh  slack_app.py  slack_simple.py  social_pipeline.py  social_pipeline_v2.py  test_actual_post.py  test_pipeline.py  verify.py  (+2 more)
.beads/: last-touched
.night-nurse/: config.json  priorities.md  state.json
agent/: cleanup.cjs  debug-linkedin.ts  debug-twitter.ts  facebook-auth.ts  instagram-auth.ts  package-lock.json  package.json  pnpm-lock.yaml  test-animate-focus.ts  test-animate-kling.ts  test-expressive.ts  test-flux-rayogram.ts  test-hook-platforms.ts  test-instax-brand.ts  test-kunz.ts  test-variety.ts
agents/: __init__.py  content_creator.py  media_generator.py  replicate_image.py  story_hunter.py
brand/: givecare.yml
brands/: givecare.yml  scty.yml
convex/: aestheticHistory.ts  brands.ts  contentPool.ts  convex.config.ts  generations.ts  inspirations.ts  package.json  schema.ts
docs/: AGENTS.md  AGNO_NATIVE_IMPLEMENTATION.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT_WORKFLOW.md  DOCKER_DEPLOYMENT.md  FEATURE_SPECIFICATIONS.md  (+22 more)
(+394 files in other folders)
